--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Webpage</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Random Choice</title>
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>  <!-- ĐÃ SỬA ĐƯỜNG DẪN -->
 </body>
 </html>
