--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             color: white;
         }
     </style>
+
 </head>
 <body>
     <div id="container">
@@ -48,11 +49,24 @@
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="randomizePosition()">Không</button>
     </div>
-     <script src="main.js"></script>
       <script>
-        function showCongratulations() {
-            alert('Chúc mừng! Bạn đã chọn trả nợ.');
-        }
+            function randomizePosition() {
+                const container = document.getElementById('container');
+                const maxX = window.innerWidth - container.offsetWidth;
+                const maxY = window.innerHeight - container.offsetHeight;
+
+                const randomX = Math.random() * maxX;
+                const randomY = Math.random() * maxY;
+
+                container.style.position = 'absolute';
+                container.style.left = `${randomX}px`;
+                container.style.top = `${randomY}px`;
+            }
+
+            function showCongratulations() {
+                alert('Chúc mừng! Bạn đã chọn trả nợ.');
+            }
     </script>
+    <script src="main.js"></script>
 </body>
 </html>
