--- a/index.html
+++ b/index.html
@@ -41,32 +41,13 @@
             color: white;
         }
     </style>
-
 </head>
 <body>
     <div id="container">
         <h1>Trả nợ?</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
-        <button id="no" onclick="randomizePosition()">Không</button>
+        <button id="no" onclick="moveContainer()">Không</button>
     </div>
-      <script>
-            function randomizePosition() {
-                const container = document.getElementById('container');
-                const maxX = window.innerWidth - container.offsetWidth;
-                const maxY = window.innerHeight - container.offsetHeight;
-
-                const randomX = Math.random() * maxX;
-                const randomY = Math.random() * maxY;
-
-                container.style.position = 'absolute';
-                container.style.left = `${randomX}px`;
-                container.style.top = `${randomY}px`;
-            }
-
-            function showCongratulations() {
-                alert('Chúc mừng! Bạn đã chọn trả nợ.');
-            }
-    </script>
     <script src="main.js"></script>
 </body>
 </html>
