--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trả Nợ</title>
+    <title>Trả nợ một đời cho anh nhé!!!</title>
     <style>
         html, body {
             width: 100%;
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Trả nợ?</h1>
+        <h1>Trả nợ một đời cho anh nhé!!!?</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="moveContainer()">Không</button>
     </div>
