--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div id="container">
-        <h1>Trả nợ một đời cho anh nhé!!!?</h1>
+        <h1>Trả nợ một đời cho anh nhé!!!</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="moveContainer()">Không</button>
     </div>
