--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trả nợ một đời cho anh nhé!!!</title>
+    <title>Trả nợ một đời cho anh nhé?</title>
     <style>
         html, body {
             width: 100%;
@@ -40,11 +40,65 @@
             background-color: #f44336;
             color: white;
         }
+        .heart-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 100; /* Đảm bảo các trái tim luôn ở trên các phần tử khác */
+            overflow: hidden; /* ẩn các trái tim ra ngoài view port */
+        }
+
+        .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            transform: rotate(45deg);
+            animation: fall 5s linear forwards;
+            pointer-events: none;
+        }
+
+        .heart::before,
+        .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            border-radius: 50%;
+        }
+
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
+
+        .heart::after {
+            top: 0;
+            left: 10px;
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translate(0, 0) rotate(45deg);
+                opacity: 1;
+            }
+            100% {
+               transform: translate(0, 100vh) rotate(45deg);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
+    <div class="heart-container">
+        <div class="heart"></div>
+    </div>
     <div id="container">
-        <h1>Trả nợ một đời cho anh nhé!!!</h1>
+        <h1>Trả nợ một đời cho anh nhé?</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="moveContainer()">Không</button>
     </div>
