--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
             height: 100%;
             pointer-events: none;
             z-index: 100;
+            overflow: hidden;
         }
 
-        .heart {
+         .heart {
             position: absolute;
             width: 20px;
             height: 20px;
