--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             overflow: hidden;
         }
 
-         .heart {
+       .heart {
             position: absolute;
             width: 20px;
             height: 20px;
             background-color: red;
-            transform: rotate(45deg);
+            transform: rotate(-45deg); /* Thay đổi ở đây */
             pointer-events: none;
         }
 
@@ -82,11 +82,11 @@
 
         @keyframes fall {
             0% {
-                transform: translate(0, 0) rotate(45deg);
+                transform: translate(0, 0) rotate(-45deg);
                 opacity: 1;
             }
             100% {
-               transform: translate(0, 100vh) rotate(45deg);
+               transform: translate(0, 100vh) rotate(-45deg);
                 opacity: 0;
             }
         }
