--- a/index.html
+++ b/index.html
@@ -1,34 +1,105 @@
-function moveContainer() {
-    const container = document.getElementById('container');
-    const maxX = window.innerWidth - container.offsetWidth;
-    const maxY = window.innerHeight - container.offsetHeight;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trả Nợ</title>
+    <style>
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            transition: transform 0.3s ease;
+            position: relative;
+        }
+        #container {
+            text-align: center;
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+        }
+        #yes {
+            background-color: #4caf50;
+            color: white;
+        }
+        #no {
+            background-color: #f44336;
+            color: white;
+        }
+        .heart-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 100;
+            overflow: hidden;
+        }
 
-    const randomX = Math.random() * maxX;
-    const randomY = Math.random() * maxY;
+       .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            transform: rotate(-45deg); /* Thay đổi ở đây */
+            pointer-events: none;
+        }
 
-    container.style.position = 'absolute';
-    container.style.left = `${randomX}px`;
-    container.style.top = `${randomY}px`;
-}
+        .heart::before,
+        .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            border-radius: 50%;
+        }
 
-function showCongratulations() {
-    const heartContainer = document.querySelector('.heart-container');
-    heartContainer.innerHTML = ''; // Xóa các trái tim cũ nếu có
-    const numHearts = 40; // Số lượng trái tim
-    for (let i = 0; i < numHearts; i++) {
-        const heart = document.createElement('div');
-        heart.classList.add('heart');
-        heart.style.left = Math.random() * window.innerWidth + 'px'; // Vị trí ngang ngẫu nhiên
-       heart.style.animationDelay = Math.random() * 3 + 's';
-        heartContainer.appendChild(heart);
-        heart.addEventListener('animationend', () => {
-                heart.remove();
-        });
-    }
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
 
-    alert('Chúc mừng! Bạn đã chọn đúng người <3');
+        .heart::after {
+            top: 0;
+            left: 10px;
+        }
 
-     setTimeout(() => {
-       heartContainer.innerHTML = '';
-   }, 5000);
-}
+        @keyframes fall {
+            0% {
+                transform: translate(0, 0) rotate(-45deg);
+                opacity: 1;
+            }
+            100% {
+               transform: translate(0, 100vh) rotate(-45deg);
+                opacity: 0;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="heart-container">
+    </div>
+    <div id="container">
+        <h1>Trả nợ?</h1>
+        <button id="yes" onclick="showCongratulations()">Có</button>
+        <button id="no" onclick="moveContainer()">Không</button>
+    </div>
+    <script src="main.js"></script>
+</body>
+</html>
