--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yêu anh <3</title>
+    <title>Trả Nợ</title>
     <style>
         html, body {
             width: 100%;
@@ -56,7 +56,7 @@
             width: 20px;
             height: 20px;
             background-color: red;
-            transform: rotate(-45deg); /* Thay đổi ở đây */
+            transform: rotate(-45deg);
             pointer-events: none;
         }
 
@@ -96,7 +96,7 @@
     <div class="heart-container">
     </div>
     <div id="container">
-        <h1>Yêu anh <3</h1>
+        <h1>Trả nợ?</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="moveContainer()">Không</button>
     </div>
