--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yêu anh <3</title>
+    <title>Trả Nợ</title>
     <style>
         html, body {
             width: 100%;
@@ -51,7 +51,7 @@
             overflow: hidden;
         }
 
-        .heart {
+         .heart {
             position: absolute;
             width: 20px;
             height: 20px;
@@ -60,43 +60,32 @@
             pointer-events: none;
         }
 
-       .heart::before,
-       .heart::after {
-           content: '';
-           position: absolute;
-           width: 20px;
-           height: 20px;
-           background-color: red;
-           border-radius: 50%;
-       }
+        .heart::before,
+        .heart::after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            border-radius: 50%;
+        }
 
-       .heart::before {
-           top: -10px;
-           left: 0;
-       }
+        .heart::before {
+            top: -10px;
+            left: 0;
+        }
 
-       .heart::after {
-           top: 0;
-           left: 10px;
-       }
-
-        @keyframes fall {
-             0% {
-                  transform: translate(0, 0) rotate(-45deg);
-                 opacity: 1;
-              }
-            100% {
-                  transform: translate(0, 100vh) rotate(-45deg);
-                  opacity: 0;
-              }
-       }
+        .heart::after {
+            top: 0;
+            left: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="heart-container">
     </div>
     <div id="container">
-        <h1>Yêu anh <3</h1>
+        <h1>Trả nợ?</h1>
         <button id="yes" onclick="showCongratulations()">Có</button>
         <button id="no" onclick="moveContainer()">Không</button>
     </div>
